k8s/apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-master-frontend-service

spec:
  type: ClusterIP
  selector:
    app: booking-master-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
