k8s/apps/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-master-frontend-ingress

spec:
  ingressClassName: nginx
  rules:
    - host: 72.56.248.210.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: booking-master-frontend-service  
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: booking-master-service  
                port:
                  number: 8000 
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: booking-master-service 
                port:
                  number: 8000

          - path: /static
            pathType: Prefix
            backend:
              service:
                name: booking-master-service 
                port:
                  number: 8000

    - host: admin.72.56.248.210.nip.io
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console-service # Или как называется ваш сервис MinIO
                port:
                  number: 9001 
                  
    - host: s3.72.56.248.210.nip.io
      http:
        paths:
          # Это регулярное выражение захватывает все после /api-s3/
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-api-service # Или как называется ваш сервис MinIO
                port:
                  number: 9000
